--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,6 @@
- @import "tailwindcss";
+@import 'tailwindcss';
+
+/* Import Custom CSS Code here from CSS folder */
+
+/* This is an Example */
+@import './css/custom-css-here.css';
