Working on Simple folder structure

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 @import 'tailwindcss';
 
+/* One File To Rule Them All */
 /* Import Custom CSS Code here from CSS folder */
 
 /* This is an Example */
