Add responsive RegistrationForm with validation and base styles

--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,10 @@
 
 /* This is an Example */
 @import './css/custom-css-here.css';
+@import './css/variables.css';
+
+
+
+body {
+    font-family: var(--font-family-base);
+}
