--- a/src/css/custom-css-here.css
+++ b/src/css/custom-css-here.css
@@ -13,3 +13,112 @@
   border: none;
   cursor: pointer;
 }
+
+.member-wrapper {
+  display: grid;
+  gap: 1rem;
+  grid-template-columns: 1fr;
+  grid-template-rows: auto 1fr auto;
+  grid-template-areas:
+    "nav"
+    "main"
+    "footer";
+  height: 100dvh;
+  padding: 0.8rem;
+
+  @media (width >=768px) {
+    grid-template-columns: 80px 1fr;
+    grid-template-rows: auto 1fr auto;
+    grid-template-areas:
+      "nav header"
+      "nav main"
+      "nav footer";
+  }
+
+  @media (width >=1400px) {
+    grid-template-columns: 250px 1fr;
+    grid-template-rows: auto 1fr auto;
+    grid-template-areas:
+      "nav header"
+      "nav main"
+      "nav footer";
+  }
+}
+
+.navbar {
+  grid-area: nav;
+  display: flex;
+  align-items: center;
+  border-radius: 1rem;
+  padding: 1.5rem;
+  width: 100%;
+  box-shadow: 1px 2px 6px rgba(73, 71, 73, 0.014);
+
+  @media (width >=768px) {
+    flex-direction: column;
+    gap: 3rem;
+    .page-indicator {
+      display: none;
+    }
+  }
+}
+
+header {
+  display: none;
+  grid-area: header;
+  justify-content: end;
+  border-radius: 1rem;
+  padding: 1.5rem;
+  box-shadow: 1px 2px 4px rgba(73, 71, 73, 0.07);
+  @media (width >=768px) {
+    display: grid;
+  }
+}
+
+main {
+  grid-area: main;
+  background-color: var(--main-background-color);
+  border-radius: 1rem;
+  padding: 1.5rem;
+  box-shadow: 1px 2px 4px rgba(73, 71, 73, 0.103);
+  overflow-y: auto;
+}
+
+footer {
+  grid-area: footer;
+  border-radius: 1rem;
+  padding: 1.5rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+
+  @media (width >=768px) {
+    flex-direction: row;
+  }
+}
+
+.logo-container {
+  display: flex;
+  align-items: center;
+  max-width: 60px;
+  @media (width >=768px) {
+    max-width: 100%;
+  }
+  .logo-text {
+    display: none;
+    font-size: 1.5rem;
+    font-weight: 700;
+    color: var(--clr-primary-600);
+    @media (width >=1400px) {
+      display: flex;
+    }
+  }
+  .logo-img-container {
+    max-width: 60px;
+    img {
+      width: 100%;
+      height: auto;
+    }
+  }
+}
