--- a/src/css/custom-css-here.css
+++ b/src/css/custom-css-here.css
@@ -48,22 +48,32 @@
 .navbar {
   grid-area: nav;
   display: flex;
+  flex-direction: row;          
   align-items: center;
-  border-radius: 1rem;
-  padding: 1.5rem;
+  justify-content: space-between; 
+  padding: 1rem;                 
+  gap: 1rem;
   width: 100%;
+  border-radius: 1rem;
   box-shadow: 1px 2px 6px rgba(73, 71, 73, 0.014);
+  height: auto;
+}
 
-  @media (width >=768px) {
+
+@media (width >= 768px) {
+  .navbar {
     flex-direction: column;
-    gap: 3rem;
-    height: 100%;
     align-items: flex-start;
-    .page-indicator {
-      display: none;
-    }
+    gap: 3rem;
+    padding: 1.5rem;
+    height: 100%; 
+  }
+
+  .navbar .page-indicator {
+    display: none;
   }
 }
+
 
 header {
   display: none;
@@ -126,6 +136,7 @@ footer {
 }
 
 .logout-btn {
+  margin-top: auto;
   background-color: var(--clr-link);
   color: var(--clr-text-invert);
   padding: 0.75rem 1rem;
@@ -152,12 +163,7 @@ footer {
   background-color: var(--clr-link-hover);
 }
 
-.spacer {
-  margin-top: auto;
-}
-
-
-/* Endast Test, tas bort senare*/
+/* Only for testing responsive functionality*/
 .nav-link {
   color: var(--clr-link);
   font-weight: 600;
