--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,12 @@
-@import 'tailwindcss';
+@import "tailwindcss";
 
 /* One File To Rule Them All */
 /* Import Custom CSS Code here from CSS folder */
 
 /* This is an Example */
-@import './css/custom-css-here.css';
-@import './css/variables.css';
-
-
+@import "./css/custom-css-here.css";
+@import "./css/variables.css";
 
 body {
-    font-family: var(--font-family-base);
+  font-family: var(--font-family-base);
 }
