--- a/src/css/custom-css-here.css
+++ b/src/css/custom-css-here.css
@@ -81,10 +81,13 @@
   }
   @media (width >= 768px) {
     flex-direction: column;
-    align-items: flex-start;
     gap: 5rem;
-    padding: 1.5rem;
+    padding: 1.5rem 0;
     height: 100%;
+  }
+  @media (width >= 1400px) {
+    align-items: start;
+    padding: 2rem;
   }
 }
 
